Add to list details of  Happy-resort project

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <ol>
         <li><a href="https://github.com/alvinkenyagah/hello-world">Hello-World</a><p>My first ever webpage,which will guide me in becoming a web developer.
           <br>I intend add more features to make it even fancier. </p></li>
-        <li><a href=""></li>
+         <li><a href="https://github.com/alvinkenyagah/Happy-resort">Happy-resort</a><p>Simple webpage of destinations offered by Happy resort travel agency.</p></li>
         <li></li>
       </ol>
       <p></p>
