Changed portrait image source

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <h1 class="head">Alvin Kenyagah's Portfolio</h1>
     <div class="row">
       <div class="column left">
-        <p><img src="/imgs/potrait.jpg" alt="Potrait photo" /></p>
+        <p><img src="https://i.ibb.co/xGZWhsW/potrait.jpg" alt="Potrait photo" /></p>
       </div>
       <div class="column right">
         <p> Hi there, I am <span class="alvin"><strong><em> Alvin Kenyagah</span></em></strong
